output/hello-world-chart/templates/deployment.yaml
---
# Source: hello-world-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-api-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-api-prod
  template:
    metadata:
      labels:
        app: hello-world-api-prod
    spec:
      containers:
        - name: hello-world-api-prod
          image: "gitops-hello-world-frontend:0.0.1"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
