output/hello-world-chart/templates/service.yaml
---
# Source: hello-world-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-prod
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hello-world-api-prod
