output/hello-world-chart/templates/ingress.yaml
---
# Source: hello-world-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-frontend-dev
spec:
  rules:
    - host: "hello-world.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-frontend-dev
                port:
                  number: 8080
